--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neidhal-clone",
+  "name": "neidhal-clone-full",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "clsx": "^1.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
